src/main/java/com/example/c_compiler/c_gParser.java
package com.example.c_compiler;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class c_gParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, COMMENT=2, LINE_COMMENT=3, FOR=4, WHILE=5, DO=6, IF=7, ELSE=8, 
		RETURN=9, CONTINUE=10, BREAK=11, SWITCH=12, CASE=13, DEFAULT=14, GOTO=15, 
		INT=16, FLOAT=17, DOUBLE=18, VOID=19, CHAR=20, ENUM=21, STRUCT=22, UNION=23, 
		CONST=24, VOLATILE=25, TYPEDEF=26, EXTERN=27, STATIC=28, AUTO=29, REGISTER=30, 
		SIGNED=31, UNSIGNED=32, SIZEOF=33, PTRDIFF=34, LONG=35, SHORT=36, INLINE=37, 
		COMPLEX=38, IMAGINARY=39, BOOL=40, BOOL_CONSTANT=41, ELLIPSIS=42, INT_CONSTANT=43, 
		FLOAT_CONSTANT=44, CHAR_CONSTANT=45, STRING_LITERAL=46, IDENTIFIER=47, 
		SEMICOLON=48, LBRACE=49, RBRACE=50, COMMA=51, COLON=52, ASSIGN=53, LPAREN=54, 
		RPAREN=55, LBRACKET=56, RBRACKET=57, QUESTION=58, OR=59, AND=60, BIT_OR=61, 
		BIT_XOR=62, BIT_AND=63, EQ=64, NE=65, LEFT_SHIFT=66, RIGHT_SHIFT=67, ADD=68, 
		SUB=69, MUL=70, DIV=71, MOD=72, MUL_ASSIGN=73, DIV_ASSIGN=74, MOD_ASSIGN=75, 
		ADD_ASSIGN=76, SUB_ASSIGN=77, LEFT_ASSIGN=78, RIGHT_ASSIGN=79, AND_ASSIGN=80, 
		XOR_ASSIGN=81, OR_ASSIGN=82, INC=83, DEC=84, LT=85, GT=86, LE=87, GE=88, 
		DOT=89, ARROW=90, BIT_NOT=91, NOT=92;
	public static final int
		RULE_program = 0, RULE_externalDeclaration = 1, RULE_functionDefinition = 2, 
		RULE_declaration = 3, RULE_declarationSpecifier = 4, RULE_typeSpecifier = 5, 
		RULE_typeQualifier = 6, RULE_structOrUnionSpecifier = 7, RULE_structOrUnion = 8, 
		RULE_structDeclaration = 9, RULE_specifierQualifierList = 10, RULE_structDeclaratorList = 11, 
		RULE_structDeclarator = 12, RULE_enumSpecifier = 13, RULE_enumeratorList = 14, 
		RULE_enumerator = 15, RULE_declarationSpecifiers = 16, RULE_initDeclaratorList = 17, 
		RULE_initDeclarator = 18, RULE_declarator = 19, RULE_directDeclarator = 20, 
		RULE_pointer = 21, RULE_identifierList = 22, RULE_parameterTypeList = 23, 
		RULE_parameterList = 24, RULE_parameterDeclaration = 25, RULE_initializer = 26, 
		RULE_compoundStatement = 27, RULE_statement = 28, RULE_labeledStatement = 29, 
		RULE_expressionStatement = 30, RULE_selectionStatement = 31, RULE_iterationStatement = 32, 
		RULE_jumpStatement = 33, RULE_expression = 34, RULE_assignmentExpression = 35, 
		RULE_conditionalExpression = 36, RULE_logicalOrExpression = 37, RULE_logicalAndExpression = 38, 
		RULE_inclusiveOrExpression = 39, RULE_exclusiveOrExpression = 40, RULE_andExpression = 41, 
		RULE_equalityExpression = 42, RULE_relationalExpression = 43, RULE_shiftExpression = 44, 
		RULE_additiveExpression = 45, RULE_multiplicativeExpression = 46, RULE_castExpression = 47, 
		RULE_unaryExpression = 48, RULE_postfixExpression = 49, RULE_primaryExpression = 50, 
		RULE_argumentExpressionList = 51, RULE_string = 52, RULE_typeName = 53, 
		RULE_abstractDeclarator = 54, RULE_directAbstractDeclarator = 55, RULE_unaryOperator = 56, 
		RULE_assignmentOperator = 57, RULE_identifier = 58, RULE_typedefName = 59, 
		RULE_constantExpression = 60, RULE_enumerationConstant = 61, RULE_functionSpecifier = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "externalDeclaration", "functionDefinition", "declaration", 
			"declarationSpecifier", "typeSpecifier", "typeQualifier", "structOrUnionSpecifier", 
			"structOrUnion", "structDeclaration", "specifierQualifierList", "structDeclaratorList", 
			"structDeclarator", "enumSpecifier", "enumeratorList", "enumerator", 
			"declarationSpecifiers", "initDeclaratorList", "initDeclarator", "declarator", 
			"directDeclarator", "pointer", "identifierList", "parameterTypeList", 
			"parameterList", "parameterDeclaration", "initializer", "compoundStatement", 
			"statement", "labeledStatement", "expressionStatement", "selectionStatement", 
			"iterationStatement", "jumpStatement", "expression", "assignmentExpression", 
			"conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
			"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
			"castExpression", "unaryExpression", "postfixExpression", "primaryExpression", 
			"argumentExpressionList", "string", "typeName", "abstractDeclarator", 
			"directAbstractDeclarator", "unaryOperator", "assignmentOperator", "identifier", 
			"typedefName", "constantExpression", "enumerationConstant", "functionSpecifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'for'", "'while'", "'do'", "'if'", "'else'", 
			"'return'", "'continue'", "'break'", "'switch'", "'case'", "'default'", 
			"'goto'", "'int'", "'float'", "'double'", "'void'", "'char'", "'enum'", 
			"'struct'", "'union'", "'const'", "'volatile'", "'typedef'", "'extern'", 
			"'static'", "'auto'", "'register'", "'signed'", "'unsigned'", "'sizeof'", 
			"'ptrdiff_t'", "'long'", "'short'", "'inline'", "'_Complex'", "'_Imaginary'", 
			"'_Bool'", null, "'...'", null, null, null, null, null, "';'", "'{'", 
			"'}'", "','", "':'", "'='", "'('", "')'", "'['", "']'", "'?'", "'||'", 
			"'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'<<'", "'>>'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
			"'>>='", "'&='", "'^='", "'|='", "'++'", "'--'", "'<'", "'>'", "'<='", 
			"'>='", "'.'", "'->'", "'~'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "COMMENT", "LINE_COMMENT", "FOR", "WHILE", "DO", 
			"IF", "ELSE", "RETURN", "CONTINUE", "BREAK", "SWITCH", "CASE", "DEFAULT", 
			"GOTO", "INT", "FLOAT", "DOUBLE", "VOID", "CHAR", "ENUM", "STRUCT", "UNION", 
			"CONST", "VOLATILE", "TYPEDEF", "EXTERN", "STATIC", "AUTO", "REGISTER", 
			"SIGNED", "UNSIGNED", "SIZEOF", "PTRDIFF", "LONG", "SHORT", "INLINE", 
			"COMPLEX", "IMAGINARY", "BOOL", "BOOL_CONSTANT", "ELLIPSIS", "INT_CONSTANT", 
			"FLOAT_CONSTANT", "CHAR_CONSTANT", "STRING_LITERAL", "IDENTIFIER", "SEMICOLON", 
			"LBRACE", "RBRACE", "COMMA", "COLON", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "QUESTION", "OR", "AND", "BIT_OR", "BIT_XOR", "BIT_AND", 
			"EQ", "NE", "LEFT_SHIFT", "RIGHT_SHIFT", "ADD", "SUB", "MUL", "DIV", 
			"MOD", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
			"LEFT_ASSIGN", "RIGHT_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", "OR_ASSIGN", 
			"INC", "DEC", "LT", "GT", "LE", "GE", "DOT", "ARROW", "BIT_NOT", "NOT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "c_g.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public c_gParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(c_gParser.EOF, 0); }
		public List<ExternalDeclarationContext> externalDeclaration() {
			return getRuleContexts(ExternalDeclarationContext.class);
		}
		public ExternalDeclarationContext externalDeclaration(int i) {
			return getRuleContext(ExternalDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				externalDeclaration();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 140737555398656L) != 0) );
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExternalDeclarationContext extends ParserRuleContext {
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ExternalDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externalDeclaration; }
	}

	public final ExternalDeclarationContext externalDeclaration() throws RecognitionException {
		ExternalDeclarationContext _localctx = new ExternalDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_externalDeclaration);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				functionDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<DeclarationSpecifierContext> declarationSpecifier() {
			return getRuleContexts(DeclarationSpecifierContext.class);
		}
		public DeclarationSpecifierContext declarationSpecifier(int i) {
			return getRuleContext(DeclarationSpecifierContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDefinition);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(137);
					declarationSpecifier();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(140); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			setState(142);
			declarator();
			setState(143);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(c_gParser.SEMICOLON, 0); }
		public List<DeclarationSpecifierContext> declarationSpecifier() {
			return getRuleContexts(DeclarationSpecifierContext.class);
		}
		public DeclarationSpecifierContext declarationSpecifier(int i) {
			return getRuleContext(DeclarationSpecifierContext.class,i);
		}
		public InitDeclaratorListContext initDeclaratorList() {
			return getRuleContext(InitDeclaratorListContext.class,0);
		}
		public DeclarationSpecifiersContext declarationSpecifiers() {
			return getRuleContext(DeclarationSpecifiersContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			int _alt;
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(145);
						declarationSpecifier();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(148); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 47)) & ~0x3f) == 0 && ((1L << (_la - 47)) & 8388737L) != 0)) {
					{
					setState(150);
					initDeclaratorList();
					}
				}

				setState(153);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				declarationSpecifiers();
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 47)) & ~0x3f) == 0 && ((1L << (_la - 47)) & 8388737L) != 0)) {
					{
					setState(156);
					initDeclaratorList();
					}
				}

				setState(159);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationSpecifierContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TypeQualifierContext typeQualifier() {
			return getRuleContext(TypeQualifierContext.class,0);
		}
		public DeclarationSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationSpecifier; }
	}

	public final DeclarationSpecifierContext declarationSpecifier() throws RecognitionException {
		DeclarationSpecifierContext _localctx = new DeclarationSpecifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationSpecifier);
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case DOUBLE:
			case VOID:
			case CHAR:
			case ENUM:
			case STRUCT:
			case UNION:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				typeSpecifier();
				}
				break;
			case CONST:
			case VOLATILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				typeQualifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeSpecifierContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(c_gParser.VOID, 0); }
		public TerminalNode CHAR() { return getToken(c_gParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(c_gParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(c_gParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(c_gParser.DOUBLE, 0); }
		public StructOrUnionSpecifierContext structOrUnionSpecifier() {
			return getRuleContext(StructOrUnionSpecifierContext.class,0);
		}
		public EnumSpecifierContext enumSpecifier() {
			return getRuleContext(EnumSpecifierContext.class,0);
		}
		public TypedefNameContext typedefName() {
			return getRuleContext(TypedefNameContext.class,0);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpecifier; }
	}

	public final TypeSpecifierContext typeSpecifier() throws RecognitionException {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeSpecifier);
		try {
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(VOID);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				match(CHAR);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				match(INT);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				match(FLOAT);
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				match(DOUBLE);
				}
				break;
			case STRUCT:
			case UNION:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				structOrUnionSpecifier();
				}
				break;
			case ENUM:
				enterOuterAlt(_localctx, 7);
				{
				setState(173);
				enumSpecifier();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 8);
				{
				setState(174);
				typedefName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeQualifierContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(c_gParser.CONST, 0); }
		public TerminalNode VOLATILE() { return getToken(c_gParser.VOLATILE, 0); }
		public TypeQualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeQualifier; }
	}

	public final TypeQualifierContext typeQualifier() throws RecognitionException {
		TypeQualifierContext _localctx = new TypeQualifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeQualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !(_la==CONST || _la==VOLATILE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
